--- a/NumPy/NumPy_practice.ipynb
+++ b/NumPy/NumPy_practice.ipynb
@@ -423,6 +423,124 @@
     "casualty=np_killed+np_wounded\n",
     "print(int(np.sum(casualty)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22 Kargil District Separatists\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import numpy as np\n",
+    "with open(\"terrorismData.csv\",'r',encoding='ISO-8859-1') as f:\n",
+    "    ff=csv.DictReader(f,skipinitialspace=True)\n",
+    "    killed=[]\n",
+    "    wounded=[]\n",
+    "    city=[]\n",
+    "    group=[]\n",
+    "    for row in ff:\n",
+    "        if ((int(float(row[\"Month\"]))>=5) and (int(float(row[\"Month\"]))<=7) and (row[\"Year\"]=='1999') and row['State']=='Jammu and Kashmir'):\n",
+    "            a=row[\"Killed\"]\n",
+    "            killed.append(a)\n",
+    "            a=row[\"Wounded\"]\n",
+    "            wounded.append(a)\n",
+    "            a=row[\"City\"]\n",
+    "            city.append(a)\n",
+    "            a=row[\"Group\"]\n",
+    "            group.append(a)\n",
+    "        \n",
+    "np_killed=np.array(killed)\n",
+    "np_wounded=np.array(wounded)\n",
+    "np_city=np.array(city)\n",
+    "np_group=np.array(group)\n",
+    "\n",
+    "np_wounded[np_wounded=='']='0.0'\n",
+    "np_killed[np_killed=='']='0.0'\n",
+    "np_killed=np.array(np_killed,dtype=float)\n",
+    "np_killed=np.array(np_killed,dtype=int)\n",
+    "np_wounded=np.array(np_wounded,dtype=float)\n",
+    "np_wounded=np.array(np_wounded,dtype=int)\n",
+    "\n",
+    "np_casualty=np_killed+np_wounded\n",
+    "inx=np.argmax(np_casualty)\n",
+    "print(np_casualty[inx],np_city[inx],np_group[inx])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New Delhi' 'Samastipur' 'New Delhi' ... 'Lethapora' 'Hungrum' 'Imphal']\n",
+      "['Aankro' 'Aatpal' 'Abhapalli' ... 'runikhata' 'srinagar' 'uri']\n",
+      "[1 1 1 ... 1 4 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Open and read data file as specified in the question\n",
+    "## Print the required output in given format\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "import operator\n",
+    "\n",
+    "file_obj=open('terrorismData.csv',encoding='utf8')\n",
+    "data=csv.DictReader(file_obj, skipinitialspace= True )\n",
+    "\n",
+    "killed = []\n",
+    "wounded = []\n",
+    "city=[]\n",
+    "cas={}\n",
+    "\n",
+    "for row in data:\n",
+    "    if row['Country']=='India' and row['City']!='Unknown':\n",
+    "        killed.append(row['Killed'])\n",
+    "        wounded.append(row['Wounded'])\n",
+    "        city.append(row['City'])\n",
+    "        \n",
+    "np_killed=np.array(killed)\n",
+    "np_killed[np_killed=='']='0.0'\n",
+    "np_killed=np.array(np_killed, dtype='float')\n",
+    "np_wounded=np.array(wounded)\n",
+    "np_wounded[np_wounded=='']='0.0'\n",
+    "np_wounded=np.array(np_wounded, dtype='float')\n",
+    "np_city=np.array(city)\n",
+    "\n",
+    "\n",
+    "a =np.array(np_city)\n",
+    "unique, counts = np.unique(a, return_counts=True)\n",
+    "count = dict(zip(unique, counts))\n",
+    "print(np_city)\n",
+    "print(unique)\n",
+    "print(counts)\n",
+    "#sorted_d = dict(sorted(count.items(), key=operator.itemgetter(1),reverse=True)[:5])\n",
+    "#print(sorted_d)\n",
+    "\n",
+    "#np_casualty=np.array(np_killed+np_wounded, dtype='int')\n",
+    "#print(np_casualty)\n",
+    "\n",
+    "#keys=sorted_d.keys()\n",
+    "#value=np_casualty\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
