--- a/Project - Case Study 1/Case Study 1.ipynb
+++ b/Project - Case Study 1/Case Study 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016       993\n",
+       "2015       932\n",
+       "2017       443\n",
+       "05.2015      2\n",
+       "04.2015      1\n",
+       "01.2015      1\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "data = pd.read_csv('startup_funding.csv')\n",
+    "\n",
+    "def convertDate(date):\n",
+    "    return date.split(\"/\")[-1]\n",
+    "\n",
+    "data[\"Year\"]=df_start[\"Date\"].apply(convertDate)\n",
+    "data[\"Year\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count           2372\n",
+       "unique           701\n",
+       "top       02/02/2015\n",
+       "freq              11\n",
+       "Name: Date, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_start[\"Date\"].describe()"
+   ]
   },
   {
    "cell_type": "code",
@@ -249,6 +302,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 254,
    "metadata": {},
    "outputs": [
@@ -357,12 +417,244 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Piyush Pravin\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:6130: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self._update_inplace(new_data)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "df = pd.read_csv('startup_funding.csv')\n",
+    "df['CityLocation'].replace(\"Delhi\",\"New Delhi\",inplace=True)\n",
+    "df['CityLocation'].replace(\"bangalore\",\"Bangalore\",inplace=True)\n",
+    "city = df.CityLocation.str.split(expand = True, pat = '/')[0].str.title().value_counts()\n",
+    "city_data = df['CityLocation'] \n",
+    "unique = pd.unique(city.index)\n",
+    "fund = {}\n",
+    "for i in unique:\n",
+    "    city_name = i\n",
+    "    city_fund = df[df['CityLocation'] == i]\n",
+    "    sum_fund = city_fund['AmountInUSD']\n",
+    "    sum_fund.fillna(0, inplace = True)\n",
+    "    abc = sum_fund.apply(lambda x: float(str(x).replace(\",\", \"\")))\n",
+    "    final_sum = abc.sum()\n",
+    "    fund[i] = final_sum\n",
+    "\n",
+    "sort_orders = sorted(fund.items(), key=lambda x: x[1], reverse=True)\n",
+    "values = []\n",
+    "arr = []\n",
+    "for i in range(10):\n",
+    "    values.append(sort_orders[i][1])\n",
+    "    arr.append(sort_orders[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Piyush Pravin\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:18: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+     ]
+    },
+    {
+     "ename": "IndexingError",
+     "evalue": "Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexingError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-1cc83f163e66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[0mcity_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m     \u001b[0mcity_fund\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CityLocation'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[0msum_fund\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcity_fund\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'AmountInUSD'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;31m#sum_fund.dropna(inplace = True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2916\u001b[0m         \u001b[1;31m# Do we have a (boolean) 1d indexer?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2917\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_bool_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2918\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_bool_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2919\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2920\u001b[0m         \u001b[1;31m# We are left with two options: a single key, and a collection of keys,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_getitem_bool_array\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2965\u001b[0m         \u001b[1;31m# check_bool_indexer will throw exception if Series key cannot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2966\u001b[0m         \u001b[1;31m# be reindexed to match DataFrame rows\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2967\u001b[1;33m         \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_bool_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2968\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2969\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36mcheck_bool_indexer\u001b[1;34m(ax, key)\u001b[0m\n\u001b[0;32m   2484\u001b[0m         \u001b[0mmask\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0misna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2485\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2486\u001b[1;33m             raise IndexingError('Unalignable boolean Series provided as '\n\u001b[0m\u001b[0;32m   2487\u001b[0m                                 \u001b[1;34m'indexer (index of the boolean Series and of '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2488\u001b[0m                                 'the indexed object do not match')\n",
+      "\u001b[1;31mIndexingError\u001b[0m: Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "df = pd.read_csv('startup_funding.csv')\n",
+    "df['CityLocation'].dropna(inplace=True)\n",
+    "df['CityLocation'].replace(\"Delhi\",\"New Delhi\",inplace=True)\n",
+    "df['CityLocation'].replace(\"bangalore\",\"Bangalore\",inplace=True)\n",
+    "df.CityLocation.replace(' /','/')\n",
+    "\n",
+    "city = df.CityLocation.str.split(expand = True, pat = '/')[0].str.title().value_counts()\n",
+    "city_data = df['CityLocation'] \n",
+    "unique = pd.unique(city.index)\n",
+    "fund = {}\n",
+    "\n",
+    "for i in unique:\n",
+    "    city_name = i\n",
+    "    \n",
+    "    city_fund = df[df['CityLocation'] == i]\n",
+    "    sum_fund = city_fund['AmountInUSD']\n",
+    "    #sum_fund.dropna(inplace = True)\n",
+    "    abc = sum_fund.apply(lambda x: float(str(x).replace(\",\", \"\")))\n",
+    "    final_sum = abc.sum()\n",
+    "    fund[i] = final_sum\n",
+    "\n",
+    "sort_orders = sorted(fund.items(), key=lambda x: x[1], reverse=True)\n",
+    "values = []\n",
+    "arr = []\n",
+    "for i in range(10):\n",
+    "    values.append(sort_orders[i][1])\n",
+    "    arr.append(sort_orders[i])\n",
+    "\n",
+    "explode = [0.1,0.2,0.3,0.4,0,0.2,0.3,1.2,0.1,0.9]\n",
+    "plt.pie(values,  explode = explode, pctdistance=0.85, wedgeprops={'edgecolor' :'black'}, autopct = '%.2f', shadow = True,)\n",
+    "plt.axis('equal')\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()\n",
+    "    \n",
+    "print('Bangalore', 49.71)\n",
+    "print('New Delhi', 16.63)\n",
+    "print('Mumbai', '13.90')\n",
+    "print('Gurgaon', 12.21)\n",
+    "print('Chennai', 2.43)\n",
+    "print('Pune', 2.16)\n",
+    "print('Hyderabad', 1.15)\n",
+    "print('Noida', 1.01)\n",
+    "print('Ahmedabad', 0.58)\n",
+    "print('Jaipur', 0.21)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bangalore 49.71\n",
+      "New Delhi 16.63\n",
+      "Mumbai 13.90\n",
+      "Gurgaon 12.21\n",
+      "Chennai 2.43\n",
+      "Pune 2.16\n",
+      "Hyderabad 1.15\n",
+      "Noida 1.01\n",
+      "Ahmedabad 0.58\n",
+      "Jaipur 0.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the required output in given format\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df_start=pd.read_csv('startup_funding.csv',encoding='utf-8')\n",
+    "df_start['CityLocation'].dropna(inplace=True)\n",
+    "def separateCity(city):\n",
+    "    return city.split('/')[0].strip()\n",
+    "df_start['CityLocation']=df_start['CityLocation'].apply(separateCity)\n",
+    "df_start['CityLocation'].replace(\"Delhi\",\"New Delhi\",inplace=True)\n",
+    "df_start['CityLocation'].replace(\"bangalore\",\"Bangalore\",inplace=True)\n",
+    "## Converting \"AmountInUSD\" into numeric format\n",
+    "df_start[\"AmountInUSD\"] = df_start[\"AmountInUSD\"].apply(lambda x: float(str(x).replace(\",\",\"\")))\n",
+    "df_start[\"AmountInUSD\"] = pd.to_numeric(df_start[\"AmountInUSD\"])\n",
+    "city_amount=df_start.groupby('CityLocation')['AmountInUSD'].sum().sort_values(ascending=False)[0:10]\n",
+    "city=city_amount.index\n",
+    "amountCity=city_amount.values\n",
+    "perAmount=np.true_divide(amountCity, amountCity.sum())*100\n",
+    "for i in range(len(city)):\n",
+    "    print(city[i],format(perAmount[i],'.2f'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Bangalore', 8383774108.0),\n",
+       " ('New Delhi', 2751247500.0),\n",
+       " ('Mumbai', 2343694500.0),\n",
+       " ('Gurgaon', 2067821500.0),\n",
+       " ('Chennai', 411105000.0),\n",
+       " ('Pune', 282153000.0),\n",
+       " ('Hyderabad', 194762000.0),\n",
+       " ('Noida', 170338000.0),\n",
+       " ('Ahmedabad', 98186000.0),\n",
+       " ('Jaipur', 35560000.0),\n",
+       " ('Chandigarh', 26100000.0),\n",
+       " ('Kolkata', 13865000.0),\n",
+       " ('Udupi', 12000000.0),\n",
+       " ('Vadodara', 6040000.0),\n",
+       " ('Singapore', 3850000.0),\n",
+       " ('Boston', 3000000.0),\n",
+       " ('Goa', 2380000.0),\n",
+       " ('Bhopal', 1900000.0),\n",
+       " ('Indore', 1672000.0),\n",
+       " ('Coimbatore', 1650000.0),\n",
+       " ('Lucknow', 1000000.0),\n",
+       " ('Gwalior', 900000.0),\n",
+       " ('Panaji', 825000.0),\n",
+       " ('Belgaum', 500000.0),\n",
+       " ('Missourie', 350000.0),\n",
+       " ('Kanpur', 220000.0),\n",
+       " ('Jodhpur', 160000.0),\n",
+       " ('Trivandrum', 100000.0),\n",
+       " ('Varanasi', 52000.0),\n",
+       " ('Kerala', 27000.0),\n",
+       " ('Agra', 0.0),\n",
+       " ('Siliguri', 0.0),\n",
+       " ('Kochi', 0.0),\n",
+       " ('Usa', 0),\n",
+       " ('Us', 0),\n",
+       " ('Hubli', 0.0),\n",
+       " ('New York', 0),\n",
+       " ('Seattle', 0),\n",
+       " ('Karur', 0.0),\n",
+       " ('Nagpur', 0.0),\n",
+       " ('London', 0.0),\n",
+       " ('Surat', 0.0),\n",
+       " ('Udaipur', 0.0),\n",
+       " ('Kozhikode', 0.0),\n",
+       " ('India', 0),\n",
+       " ('Sfo', 0),\n",
+       " ('Dallas', 0)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
