Update Zomato Distance Problem.ipynb

--- a/Project - Zomato API - I/Zomato Distance Problem.ipynb
+++ b/Project - Zomato API - I/Zomato Distance Problem.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,26 +70,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "restaurant name, user rating, restaurant id and locality\n"
+    "#restaurant name, user rating, restaurant id and locality\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Themis Barbecue House 4.5 18204820 Netaji Subhash Place\n",
-      "Barbeque Nation 4.1 9561 Netaji Subhash Place\n",
-      "New Bombay Bar-Be-Que 3.6 5303 Prashant Vihar\n",
-      "UBQ by Barbeque Nation 3.7 19082741 Lawrence Road\n",
+      "Themis Barbecue House 4.3 18204820 Netaji Subhash Place\n",
+      "Barbeque Nation 4.6 9561 Netaji Subhash Place\n",
+      "Amazings Kitchen 0 19370424 Prashant Vihar\n",
       "Moet's Barbeque 0 19238917 Alipur\n",
-      "UBQ by Barbeque Nation 3.8 18889760 Rohini\n",
-      "Kays Bar-Be-Que 3.8 3079 Ashok Vihar Phase 1\n",
-      "7teen BBQ Bistro Bnq 3.8 18595610 Moti Nagar\n",
+      "UBQ by Barbeque Nation 3.1 18889760 Rohini\n",
+      "Kays Bar-Be-Que 3.9 3079 Ashok Vihar Phase 1\n",
+      "Chicken Adda 0 19179179 Rohini\n",
+      "7teen BBQ Bistro Bnq 3.9 18595610 Moti Nagar\n",
       "Pishori Chicken 0 19061375 Kirti Nagar\n",
       "Hunger On Wheels 0 19054336 Vijay Nagar\n"
      ]
@@ -97,7 +97,7 @@
    ],
    "source": [
     "response = requests.get('https://developers.zomato.com/api/v2.1/search',\n",
-    "                        headers = {'user-key':'fe2800d53acb7eea4371a2f92dad232b'},\n",
+    "                        headers = {'user-key':'###################################'},\n",
     "                       params={\"lat\":28.6977,\n",
     "                               \"lon\":77.1406, \n",
     "                               \"count\":10,\n",
@@ -107,7 +107,8 @@
     "                       ) \n",
     "py_data = response.json()\n",
     "for i in py_data[\"restaurants\"]:\n",
-    "    print(i[\"restaurant\"][\"name\"],i[\"restaurant\"][\"user_rating\"][\"aggregate_rating\"],i[\"restaurant\"][\"id\"],i[\"restaurant\"][\"location\"][\"locality\"])\n",
+    "    print(i[\"restaurant\"][\"name\"],i[\"restaurant\"][\"user_rating\"][\"aggregate_rating\"],\n",
+    "          i[\"restaurant\"][\"id\"],i[\"restaurant\"][\"location\"][\"locality\"])\n",
     "\n"
    ]
   },
