--- a/Indexing and SQLite/sqlite practice.ipynb
+++ b/Indexing and SQLite/sqlite practice.ipynb
@@ -2,24 +2,440 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Runtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12 Years a Slave (2013)</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>127 Hours (2010)</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50/50 (2011)</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>About Time (2013)</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amour (2012)</td>\n",
+       "      <td>127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Argo (2012)</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Arrival (2016)</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Before Midnight (2013)</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Big Hero 6 (2014)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Birdman or (The Unexpected Virtue of Ignorance...</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Black Swan (2010)</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Boyhood (2014)</td>\n",
+       "      <td>165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Bridge of Spies (2015)</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Captain America: Civil War (2016)</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Captain America: The Winter Soldier (2014)</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Captain Fantastic (2016)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Captain Phillips (2013)</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Creed (2015)</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Dallas Buyers Club (2013)</td>\n",
+       "      <td>117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Dawn of the Planet of the Apes (2014)</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Deadpool (2016)</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Despicable Me (2010)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Detachment (2011)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Disconnect (2012)</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Django Unchained (2012)</td>\n",
+       "      <td>165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Doctor Strange (2016)</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Drive (2011)</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Edge of Tomorrow (2014)</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>End of Watch (2012)</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Ex Machina (2014)</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>The Fault in Our Stars (2014)</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>The Fighter (2010)</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>The Girl with the Dragon Tattoo (2011)</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>The Grand Budapest Hotel (2014)</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>The Help (2011)</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>The Hobbit: An Unexpected Journey (2012)</td>\n",
+       "      <td>169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>The Hobbit: The Desolation of Smaug (2013)</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>The Hunger Games: Catching Fire (2013)</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>The Imitation Game (2014)</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>The King's Speech (2010)</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>The Lego Movie (2014)</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>The Little Prince (2015)</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>The Martian (2015)</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>The Perks of Being a Wallflower (2012)</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>The Revenant (2015)</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>The Social Network (2010)</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>The Theory of Everything (2014)</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>The Town (2010)</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>The Wolf of Wall Street (2013)</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Toy Story 3 (2010)</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>True Grit (2010)</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Tucker and Dale vs Evil (2010)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>Tyrannosaur (2011)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>Warrior (2011)</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>What We Do in the Shadows (2014)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Whiplash (2014)</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>Wreck-It Ralph (2012)</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>X-Men: Days of Future Past (2014)</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>X-Men: First Class (2011)</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>Zootopia (2016)</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>117 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'2013'"
+       "                                                 Title  Runtime\n",
+       "0                              12 Years a Slave (2013)      134\n",
+       "1                                     127 Hours (2010)       94\n",
+       "2                                         50/50 (2011)      100\n",
+       "3                                    About Time (2013)      123\n",
+       "4                                         Amour (2012)      127\n",
+       "5                                          Argo (2012)      120\n",
+       "6                                       Arrival (2016)      116\n",
+       "7                               Before Midnight (2013)      109\n",
+       "8                                    Big Hero 6 (2014)        0\n",
+       "9    Birdman or (The Unexpected Virtue of Ignorance...      119\n",
+       "10                                   Black Swan (2010)      108\n",
+       "11                                      Boyhood (2014)      165\n",
+       "12                              Bridge of Spies (2015)      142\n",
+       "13                   Captain America: Civil War (2016)      147\n",
+       "14          Captain America: The Winter Soldier (2014)      136\n",
+       "15                            Captain Fantastic (2016)        0\n",
+       "16                             Captain Phillips (2013)      134\n",
+       "17                                        Creed (2015)      133\n",
+       "18                           Dallas Buyers Club (2013)      117\n",
+       "19               Dawn of the Planet of the Apes (2014)      130\n",
+       "20                                     Deadpool (2016)      108\n",
+       "21                                Despicable Me (2010)        0\n",
+       "22                                   Detachment (2011)        0\n",
+       "23                                   Disconnect (2012)      115\n",
+       "24                             Django Unchained (2012)      165\n",
+       "25                               Doctor Strange (2016)      115\n",
+       "26                                        Drive (2011)      100\n",
+       "27                             Edge of Tomorrow (2014)      113\n",
+       "28                                 End of Watch (2012)      109\n",
+       "29                                   Ex Machina (2014)      108\n",
+       "..                                                 ...      ...\n",
+       "87                       The Fault in Our Stars (2014)      126\n",
+       "88                                  The Fighter (2010)      116\n",
+       "89              The Girl with the Dragon Tattoo (2011)      158\n",
+       "90                     The Grand Budapest Hotel (2014)       99\n",
+       "91                                     The Help (2011)      146\n",
+       "92            The Hobbit: An Unexpected Journey (2012)      169\n",
+       "93          The Hobbit: The Desolation of Smaug (2013)      161\n",
+       "94              The Hunger Games: Catching Fire (2013)      146\n",
+       "95                           The Imitation Game (2014)      114\n",
+       "96                            The King's Speech (2010)      118\n",
+       "97                               The Lego Movie (2014)      100\n",
+       "98                            The Little Prince (2015)      108\n",
+       "99                                  The Martian (2015)      144\n",
+       "100             The Perks of Being a Wallflower (2012)      102\n",
+       "101                                The Revenant (2015)      156\n",
+       "102                          The Social Network (2010)      120\n",
+       "103                    The Theory of Everything (2014)      123\n",
+       "104                                    The Town (2010)      125\n",
+       "105                     The Wolf of Wall Street (2013)      180\n",
+       "106                                 Toy Story 3 (2010)      103\n",
+       "107                                   True Grit (2010)      110\n",
+       "108                     Tucker and Dale vs Evil (2010)        0\n",
+       "109                                 Tyrannosaur (2011)        0\n",
+       "110                                     Warrior (2011)      140\n",
+       "111                   What We Do in the Shadows (2014)        0\n",
+       "112                                    Whiplash (2014)      107\n",
+       "113                              Wreck-It Ralph (2012)        0\n",
+       "114                  X-Men: Days of Future Past (2014)      132\n",
+       "115                          X-Men: First Class (2011)      132\n",
+       "116                                    Zootopia (2016)      108\n",
+       "\n",
+       "[117 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a=\"(2013)\"\n",
-    "a.strip(\"()\")"
+    "import sqlite3 as sq\n",
+    "import pandas as pd\n",
+    "db = sq.connect('IMDB.sqlite')\n",
+    "data = pd.read_sql_query('select Title, Runtime from IMDB', db)\n",
+    "#data['Runtime'].fillna(0, inplace=True)\n",
+    "data[\"Runtime\"].replace(\"\",\"0\",inplace=True)\n",
+    "#data['Runtime'].dropna(inplace=True)\n",
+    "def splitColumn(time):\n",
+    "    return int(time.split(\" \")[0].strip())\n",
+    "\n",
+    "data['Runtime'] = data['Runtime'].apply(splitColumn)\n",
+    "convert_dict = {'Runtime': int}\n",
+    "data = data.astype(convert_dict)\n",
+    "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
