Update case study II_Piyush_Pravin.ipynb

--- a/Project - Case Study 2/case study II_Piyush_Pravin.ipynb
+++ b/Project - Case Study 2/case study II_Piyush_Pravin.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,8 @@
     "        else:\n",
     "            d[e]=[startup_name[i]]\n",
     "    i=i+1\n",
-    "\n",
+    "for ele in d:\n",
+    "    d[ele]=len(set(d[ele]))\n",
     "# Now getting the top 5 values from dictionary\n",
     "for ele in d:\n",
     "    d[ele]=len(set(d[ele]))\n",
@@ -338,11 +339,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               TouchKin\n",
+       "1                Ethinos\n",
+       "2           Leverage Edu\n",
+       "3                   Zepo\n",
+       "4           Click2Clinic\n",
+       "5          Billion Loans\n",
+       "6       Ecolibriumenergy\n",
+       "7                  Droom\n",
+       "8              Jumbotail\n",
+       "9                 Moglix\n",
+       "10            Timesaverz\n",
+       "11                Minjar\n",
+       "12           MyCity4kids\n",
+       "13              Clip App\n",
+       "14           Upwardly.in\n",
+       "15            Autorox.co\n",
+       "16                Fabogo\n",
+       "17            Flickstree\n",
+       "18           Design Cafe\n",
+       "19              Innoviti\n",
+       "20              VDeliver\n",
+       "21              Bottr.me\n",
+       "22              Arcatron\n",
+       "23              QwikSpec\n",
+       "24               Chumbak\n",
+       "25               Increff\n",
+       "26                Vayana\n",
+       "27             MObiquest\n",
+       "28                 Ambee\n",
+       "29       Ideal Insurance\n",
+       "              ...       \n",
+       "2342             Refiral\n",
+       "2343        Ping Digital\n",
+       "2344     HealthyWorld.in\n",
+       "2345        Hostel Dunia\n",
+       "2346     Play your sport\n",
+       "2347             Yo Grad\n",
+       "2348              Enabli\n",
+       "2349                 CBS\n",
+       "2350           Hopscotch\n",
+       "2351    Amagi Media Labs\n",
+       "2352     HealthyWorld.in\n",
+       "2353         Simplilearn\n",
+       "2354        MyDreamStore\n",
+       "2355                Knit\n",
+       "2356             Villgro\n",
+       "2357        Corporate360\n",
+       "2358           Freshmonk\n",
+       "2359     Englishleap.com\n",
+       "2360              Antuit\n",
+       "2361       Caratlane.com\n",
+       "2362          Aasaanjobs\n",
+       "2363            Impartus\n",
+       "2364          Thrill App\n",
+       "2365        CarDekho.com\n",
+       "2366       Grabhouse.com\n",
+       "2367          Printvenue\n",
+       "2368            Graphene\n",
+       "2369      Mad Street Den\n",
+       "2370           Simplotel\n",
+       "2371    couponmachine.in\n",
+       "Name: StartupName, Length: 2372, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "startup_name"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Solution 4 "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
