Update Project - Zomato API - II.ipynb

--- a/Project - Zomato API - II/Project - Zomato API - II.ipynb
+++ b/Project - Zomato API - II/Project - Zomato API - II.ipynb
@@ -150,6 +150,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Malwani', 'BBQ', 'German', 'Cajun'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "d = pd.read_csv(\"zomato.csv\", encoding=\"latin-1\")\n",
+    "\n",
+    "df = d.copy()\n",
+    "\n",
+    "data_india = df[df[\"Country Code\"]==1]\n",
+    "cities = np.array(data_india[\"City\"])\n",
+    "cuisines= np.array(data_india[\"Cuisines\"])\n",
+    "ncr = set()\n",
+    "roi = set()\n",
+    "for i in range(len(cities)):\n",
+    "    if cities[i]==\"New Delhi\" or cities[i]==\"Ghaziabad\" or cities[i]==\"Noida\" or cities[i]==\"Gurgaon\" or cities[i]==\"Faridabad\":\n",
+    "        for cui in cuisines[i].split(\", \"):\n",
+    "            ncr.add(cui)\n",
+    "    else:\n",
+    "        for cui in cuisines[i].split(\", \"):\n",
+    "            roi.add(cui)\n",
+    "print(roi - ncr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
