--- a/Indexing and SQLite/IMBD_db.ipynb
+++ b/Indexing and SQLite/IMBD_db.ipynb
@@ -94,6 +94,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Detachment\\xa0(2011)', 'I, Daniel Blake\\xa0(2016)', 'Pride\\xa0(2014)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "db = sqlite3.connect('IMDB.sqlite')\n",
+    "data_1 = pd.read_sql_query('select * from IMDB', db)\n",
+    "data = pd.read_sql_query(\"select * from earning\", db)\n",
+    "data_1['Budget'].replace('',0,inplace=True)\n",
+    "\n",
+    "data_min= data_1['Budget'].min()\n",
+    "movie = data_1.loc[data_1['Budget'] == data_min]\n",
+    "a = []\n",
+    "for i in movie['Title']:\n",
+    "    a.append(i)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
    "outputs": [
