--- a/NumPy/NumPy_practice.ipynb
+++ b/NumPy/NumPy_practice.ipynb
@@ -3526,6 +3526,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'year2017.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-63cfac29d092>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'year2017.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDictReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdata_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'year2017.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open('year2017.csv', newline='') as csvfile:\n",
+    "    data = csv.DictReader(csvfile)\n",
+    "    data_list = list(data)\n",
+    "    for row in range(1,11):\n",
+    "        print(data_list[row][3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Srinagar 3134\n",
+      "New Delhi 2095\n",
+      "Mumbai 2016\n",
+      "Jammu 1119\n",
+      "Guwahati 822\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Open and read data file as specified in the question\n",
+    "## Print the required output in given format\n",
+    "import csv\n",
+    "import numpy as np\n",
+    "\n",
+    "with open(\"terrorismData.csv\",encoding='ISO-8859-1') as file:\n",
+    "    file_list= csv.DictReader(file, skipinitialspace=True)\n",
+    "    killed=[]\n",
+    "    wounded=[]\n",
+    "    city=[]\n",
+    "    \n",
+    "    for i in file_list:\n",
+    "        if i[\"Country\"]==\"India\":\n",
+    "            killed.append(i[\"Killed\"])\n",
+    "            wounded.append(i[\"Wounded\"])\n",
+    "            city.append(i[\"City\"])\n",
+    "        \n",
+    "np_kill= np.array(killed)\n",
+    "np_wounded=np.array(wounded)\n",
+    "np_kill[np_kill=='']='0.0'\n",
+    "np_wounded[np_wounded=='']='0.0'\n",
+    "np_kill= np.array(np_kill,dtype=float)\n",
+    "np_wounded= np.array(np_wounded,dtype=float)\n",
+    "np_casualty= np_kill+np_wounded\n",
+    "np_city=np.array(city)\n",
+    "\n",
+    "\n",
+    "def cityCasualty(cityarr,casualtyarr):\n",
+    "    arr=[]\n",
+    "    unique=np.unique(cityarr)\n",
+    "    for i in unique:\n",
+    "        index=np.where(cityarr==i)\n",
+    "        sumCasualty= casualtyarr[index].sum()\n",
+    "        arr.append([sumCasualty,i])\n",
+    "    arr.sort(reverse=True)\n",
+    "    return arr\n",
+    "arr=cityCasualty(np_city,np_casualty)\n",
+    "for i in range(6):\n",
+    "    if arr[i][1]!='Unknown':\n",
+    "        print(arr[i][1],int(arr[i][0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Delhi   210\n",
+      "Chennai   232\n",
+      "Jhargam   255\n",
+      "Dispur   272\n",
+      "Mumbai   1005\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([3591,  258, 5358, 4292, 3689], dtype=int64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Open and read data file as specified in the question\n",
+    "## Print the required output in given format\n",
+    "import csv\n",
+    "import numpy as np\n",
+    "\n",
+    "with open(\"terrorismData.csv\",encoding='ISO-8859-1') as file:\n",
+    "    file_list= csv.DictReader(file, skipinitialspace=True)\n",
+    "    killed=[]\n",
+    "    wounded=[]\n",
+    "    city=[]\n",
+    "    \n",
+    "    for i in file_list:\n",
+    "        if i[\"Country\"]==\"India\":\n",
+    "            killed.append(i[\"Killed\"])\n",
+    "            wounded.append(i[\"Wounded\"])\n",
+    "            city.append(i[\"City\"])\n",
+    "        \n",
+    "np_kill= np.array(killed)\n",
+    "np_wounded=np.array(wounded)\n",
+    "np_kill[np_kill=='']='0.0'\n",
+    "np_wounded[np_wounded=='']='0.0'\n",
+    "np_kill= np.array(np_kill,dtype=float)\n",
+    "np_wounded= np.array(np_wounded,dtype=float)\n",
+    "np_casualty= np_kill+np_wounded\n",
+    "np_city=np.array(city)\n",
+    "bool_city= np_city != \"Unknown\"\n",
+    "np_casualty= np_casualty[bool_city]\n",
+    "np_city=np_city[bool_city]\n",
+    "index = np_casualty.argsort()[-5:]\n",
+    "for i in index:\n",
+    "    print(np_city[i],\" \",int(np_casualty[i]))\n",
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.3 3.3 6.0 2.5 Iris-virginica \n",
+      "5.8 2.7 5.1 1.9 Iris-virginica \n",
+      "7.1 3.0 5.9 2.1 Iris-virginica \n",
+      "6.3 2.9 5.6 1.8 Iris-virginica \n",
+      "6.5 3.0 5.8 2.2 Iris-virginica \n",
+      "7.6 3.0 6.6 2.1 Iris-virginica \n",
+      "4.9 2.5 4.5 1.7 Iris-virginica \n",
+      "7.3 2.9 6.3 1.8 Iris-virginica \n",
+      "6.7 2.5 5.8 1.8 Iris-virginica \n",
+      "7.2 3.6 6.1 2.5 Iris-virginica \n",
+      "6.5 3.2 5.1 2.0 Iris-virginica \n",
+      "6.4 2.7 5.3 1.9 Iris-virginica \n",
+      "6.8 3.0 5.5 2.1 Iris-virginica \n",
+      "5.7 2.5 5.0 2.0 Iris-virginica \n",
+      "5.8 2.8 5.1 2.4 Iris-virginica \n",
+      "6.4 3.2 5.3 2.3 Iris-virginica \n",
+      "6.5 3.0 5.5 1.8 Iris-virginica \n",
+      "7.7 3.8 6.7 2.2 Iris-virginica \n",
+      "7.7 2.6 6.9 2.3 Iris-virginica \n",
+      "6.0 2.2 5.0 1.5 Iris-virginica \n",
+      "6.9 3.2 5.7 2.3 Iris-virginica \n",
+      "5.6 2.8 4.9 2.0 Iris-virginica \n",
+      "7.7 2.8 6.7 2.0 Iris-virginica \n",
+      "6.3 2.7 4.9 1.8 Iris-virginica \n",
+      "6.7 3.3 5.7 2.1 Iris-virginica \n",
+      "7.2 3.2 6.0 1.8 Iris-virginica \n",
+      "6.2 2.8 4.8 1.8 Iris-virginica \n",
+      "6.1 3.0 4.9 1.8 Iris-virginica \n",
+      "6.4 2.8 5.6 2.1 Iris-virginica \n",
+      "7.2 3.0 5.8 1.6 Iris-virginica \n",
+      "7.4 2.8 6.1 1.9 Iris-virginica \n",
+      "7.9 3.8 6.4 2.0 Iris-virginica \n",
+      "6.4 2.8 5.6 2.2 Iris-virginica \n",
+      "6.3 2.8 5.1 1.5 Iris-virginica \n",
+      "6.1 2.6 5.6 1.4 Iris-virginica \n",
+      "7.7 3.0 6.1 2.3 Iris-virginica \n",
+      "6.3 3.4 5.6 2.4 Iris-virginica \n",
+      "6.4 3.1 5.5 1.8 Iris-virginica \n",
+      "6.0 3.0 4.8 1.8 Iris-virginica \n",
+      "6.9 3.1 5.4 2.1 Iris-virginica \n",
+      "6.7 3.1 5.6 2.4 Iris-virginica \n",
+      "6.9 3.1 5.1 2.3 Iris-virginica \n",
+      "5.8 2.7 5.1 1.9 Iris-virginica \n",
+      "6.8 3.2 5.9 2.3 Iris-virginica \n",
+      "6.7 3.3 5.7 2.5 Iris-virginica \n",
+      "6.7 3.0 5.2 2.3 Iris-virginica \n",
+      "6.3 2.5 5.0 1.9 Iris-virginica \n",
+      "6.5 3.0 5.2 2.0 Iris-virginica \n",
+      "6.2 3.4 5.4 2.3 Iris-virginica \n",
+      "5.9 3.0 5.1 1.8 Iris-virginica \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "column_name=['SepalLength','SepalWidth','PetalLength','PetalWidth','Species']\n",
+    "iris=pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data',names=column_name)\n",
+    "df=iris.copy()\n",
+    "p=df[df.Species ==\"Iris-virginica\"]\n",
+    "p=p[p.PetalLength>1.5]\n",
+    "p=p.values\n",
+    "for i in range(p.shape[0]):\n",
+    "    for j in range(p.shape[1]):\n",
+    "        print(p[i][j],end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
