--- a/NumPy/NumPy_practice.ipynb
+++ b/NumPy/NumPy_practice.ipynb
@@ -3751,6 +3751,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3336 Maoists\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('terrorismData.csv')\n",
+    "df=data.copy()\n",
+    "df = df[(df.Country == 'India')  & (df.Year > 2013)].reset_index(drop = True)\n",
+    "for i in range(len(df)):\n",
+    "    if (df.Year[i] == 2014 and df.Month[i] < 5) or (df.Year[i] == 2014 and df.Day[i] < 26 and df.Month[i] ==5):\n",
+    "        df.drop(i,inplace=True)\n",
+    "c=df.Country.describe().freq\n",
+    "d=df[df.Group !='Unknown']\n",
+    "print(c,d.Group.describe().top)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
